[gd_scene load_steps=2 format=3 uid="uid://b88212vhjrfit"]

[ext_resource type="Script" uid="uid://cmb0flin16ca3" path="res://loudness_creator.gd" id="1_xnx5r"]

[node name="LoudnessCreator" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xnx5r")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SoundItemList" type="ItemList" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="CalculateButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Calculate loudness over time (.loud file)"

[node name="CalculateAllButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Batch calculate!"

[connection signal="pressed" from="VBoxContainer/CalculateButton" to="." method="_on_calculate_button_pressed"]
[connection signal="pressed" from="VBoxContainer/CalculateAllButton" to="." method="_on_calculate_all_button_pressed"]
